--- a/contains_duplicate.ipynb
+++ b/contains_duplicate.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,7 @@
     "            if n in hashset:\n",
     "                return True\n",
     "            hashset.add(n)\n",
-    "        return False\n",
-    "\n"
+    "        return False"
    ]
   },
   {
