--- a/contains_duplicate.ipynb
+++ b/contains_duplicate.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,8 @@
       "False\n",
       "True\n",
       "False\n",
-      "True\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -61,8 +62,9 @@
     "# and can call some tests\n",
     "print(sol.containsDuplicate([1, 2, 3, 4]))  # false\n",
     "print(sol.containsDuplicate([1, 2, 3, 1]))  # true\n",
-    "print(sol.containsDuplicate([]))            # false\n",
-    "print(sol.containsDuplicate([1, 1, 1, 1]))  # true"
+    "print(sol.containsDuplicate([]))              # false\n",
+    "print(sol.containsDuplicate([1, 1, 1, 1]))  # true\n",
+    "print(sol.containsDuplicate([2, 3, 4, 5]))  # false"
    ]
   }
  ],
